<resources>
    <string name="app_name">javademo</string>
    <string name="login_now">Login now!</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="email_address">Email Address</string>
    <string name="facebook_app_id">1069740870736668</string>
    <string name="fb_login_protocol_scheme">fb1069740870736668</string>
    <string name="facebook_client_token">cbbc6c35a68fa7d038b3e66875d7906f</string>


</resources>