<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/createnewpasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_password"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:autofillHints="" />

            <EditText
                android:id="@+id/confirmnewpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:autofillHints="" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/resetpasswordButton"
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/purple"
                    android:text="@string/reset_password"
                    android:textSize="18sp"
                    app:cornerRadius="20dp" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/loginnowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/purple"
        android:padding="8dp"
        android:text="@string/login_now"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>